Removed ebab logo duplicate

--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -246,98 +246,91 @@
 					<div class="fix-10-12 margin-bottom-5">
 						<ul class="grid equal later">
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-3">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/ssm.png" alt="SSM" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-4">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/ebab-logo.png" alt="Ebab" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-5">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="80" src="../assets/img/logos/sb.png" alt="Svenska bostäder" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-6">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="140" src="../assets/img/logos/ikano_red.png" alt="ikano" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-7">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/sollentunahem.png" alt="Sollentunahem" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-8">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/ffab.png" alt="FFAB" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-3">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/ncc.png" alt="NCC" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-4">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/em.jpg" alt="EM" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-5">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="150" src="../assets/img/logos/skanska.png" alt="SKANSKA" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-6">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="80" src="../assets/img/logos/byggvesta.png" alt="Byggvesta" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-7">
-									<div class="cell">
-										<img width="100" src="../assets/img/logos/ebab-logo.png" alt="EBAB" />
-									</div>
-								</div>
-							</li>
-							<li class="col-2-12">
-								<div class=" wide equalElement ae-8">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/nordea.svg" alt="Nordea" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-3">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/pedersen.jpg" alt="Pedersen" />
 									</div>
 								</div>
 							</li>
 							<li class="col-2-12">
-								<div class=" wide equalElement ae-4">
+								<div class="wide equalElement">
 									<div class="cell">
 										<img width="100" src="../assets/img/logos/lmlaw.jpg" alt="LM LAW" />
 									</div>
