bunch of text fixes on landing page popvers

--- a/index.html
+++ b/index.html
@@ -587,7 +587,7 @@
 
         <div class="fix-10-12 center">
 					<img src="assets/svg/bm_logo_top.svg" alt="Besiktningsman.se" style="max-width: 400px;">
-          <p class="hero">Sveriges ledande entreprenadbesiktningsföretag</p>
+          <p>Sveriges ledande entreprenadbesiktningsföretag</p>
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
@@ -888,37 +888,37 @@
 							<div class="fix-10-12">
 								<ul class="flex grid-47 later">
 									<li class="col-5-12">
-										<p class="micro bold">• en modern besiktningsprocess</p>
+										<p class="micro bold">• En modern besiktningsprocess</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• besiktningsappen iSpect</p>
+										<p class="micro bold">• Besiktningsappen iSpect</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• kompletta besiktningsgrupper samt KA för er produktion.</p>
+										<p class="micro bold">• Kompletta besiktningsgrupper samt KA för er produktion.</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• granskning av handlingar</p>
+										<p class="micro bold">• Granskning av handlingar</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• fortlöpande besiktning från start till mål</p>
+										<p class="micro bold">• Fortlöpande besiktning från start till mål</p>
 									</li>
 									<li class="col-5-12">
 										<p class="micro bold">• iSpectPortal</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• utlåtande direkt</p>
+										<p class="micro bold">• Utlåtande direkt</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• sorterade felbilagor med ansvar för respektive UE/E</p>
+										<p class="micro bold">• Sorterade felbilagor med ansvar för respektive UE/E</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• statistik på fel, antal fel per UE/E och utrymme</p>
+										<p class="micro bold">• Statistik på fel, antal fel per UE/E och utrymme</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• erfarenhetsåterföring</p>
+										<p class="micro bold">• Erfarenhetsåterföring</p>
 									</li>
 									<li class="col-5-12">
-										<p class="micro bold">• översikt gällande utförda besiktningar, felnoteringar, besiktningsstatus och omfattning</p>
+										<p class="micro bold">• Översikt gällande utförda besiktningar, felnoteringar, besiktningsstatus och omfattning</p>
 									</li>
 								</ul>
 							</div>
