Mobile menus updated on the sub pages

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -109,19 +109,30 @@
 		<div class="content">
 			<a href="/" class="logo"><img src="../assets/svg/bm_logo.svg" alt=""></a>
 			<ul class="mainMenu text-blue">
-				<li><a href="../#erbjudande">Vårt erbjudande</a></li>
+				<h2 class="bold small text-blueGrey">Navigation</h2>
+				<li><a href="../#erbjudande"><p>Vårt erbjudande</p></a></li>
 				<br>
 				<br>
-				<li><a href="../kontakt/">Kundkontakt</a></li>
+				<li><a href="../kontakt/"><p>Kundkontakt</p></a></li>
 				<br>
 				<br>
-				<li><a href="../karriar/">Karriär</a></li>
+				<li><a href="../karriar/"><p>Karriär</p></a></li>
 				<br>
 				<br>
-				<li><a href="../om_oss/">Om oss</a></li>
+				<li><a href="../om_oss/"><p>Om oss</p></a></li>
 				<br>
 				<br>
-				<li><a href="../nyheter/">Publicerat & Press</a></li>
+				<li><a href="../nyheter/"><p>Publicerat & Press</p></a></li>
+				<br>
+				<br>
+				<h2 class="bold small text-blueGrey">Dokument</h2>
+				<li><a href="#"><p class="small bold">Besiktningsboken</p></a></li>
+				<br>
+				<br>
+				<li><a href="#"><p class="small bold">Lagbok 1</p></a></li>
+				<br>
+				<br>
+				<li><a href="#"><p class="small bold">Lagbok 2</p></a></li>
 			</ul>
 
 		</div>
