updated the detail information popover layouts

--- a/index.html
+++ b/index.html
@@ -678,10 +678,9 @@
 				<div class="content">
 					<div class="container">
 						<div class="container-lg">
-							<h1 class="center fromCenter margin-top-1">Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
-							<h2 class="center small">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h2>
-							<div class="margin-bottom-4 border-bottom-grey"></div>
-							<div class="fix-12-12">
+							<div class="fix-10-12 margin-top-1">
+								<h1>Vårt helhetskoncept med Digitaliserad entreprenadbesiktning </h1>
+								<h3 class="margin-bottom-2">För ökad lönsamhet och leveranssäkerhet i byggprojekt.</h3>
 								<ul class="grid">
 									<li class="col-6-12 left">
 										<h3>Skillnader</h3>
@@ -732,17 +731,17 @@
 				<div class="content">
 					<div class="container">
 						<div class="container-lg">
-
-							<ul class="flex reverse">
-								<li class="col-6-12 left cell-32">
-									<h1>Med iSpect</h1>
-									<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
-								</li>
-								<li class="col-6-12 left">
-									<img src="assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
-								</li>
-							</ul>
-
+							<div class="fix-10-12 margin-top-1">
+								<ul class="flex reverse">
+									<li class="col-6-12 left cell-32">
+										<h1>Med iSpect</h1>
+										<p>Kan besiktningsmannen under sitt arbete kontrollera, dokumentera, lagra och sända alla noteringar och projektdata direkt via sin läsplatta.</p>
+									</li>
+									<li class="col-6-12 left">
+										<img src="assets/img/ispect/ipad_front_sv.png" width="600" alt="iSpect skärmdump" />
+									</li>
+								</ul>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -760,13 +759,10 @@
 					<div class="content">
 						<div class="container">
 							<div class="container-lg">
-								<h1 class="center fromCenter margin-top-1">Besiktningsman för bostadsrättsföreningar</h1>
-								<h2 class="center small">Digital besiktningsprocess</h2>
-								<div class="margin-bottom-4 border-bottom-grey"></div>
-								<!-- Slide #24 -->
-
-								<div class="fix-10-12">
-									<div class="left ae-5 cropBottom">
+								<div class="fix-10-12 margin-top-1">
+									<div class="left cropBottom">
+										<h1>Besiktningsman för bostadsrättsföreningar</h1>
+										<h3>Digital besiktningsprocess</h3>
 										<p>
 											I en bostadsrättsförening pågår ständigt förbättringar dels i lägenheterna och dels i fastigheten som helhet. Styrelsen har ett stort ansvar för fastigheten gällande myndighets- och försäkringskrav samt att hålla fastigheten i ett bra skick med underhålls-
 											och åtgärdsplaner för att bibehålla fastighetens värde.
@@ -780,31 +776,25 @@
 										<p>
 											Vi har även KA-kontrollansvarig.
 										</p>
-										<ul>
-											<li>
-												<h2 class="bold">I våra priser ingår:</h2>
-											</li>
-											<li>
-												<p>Vår projektansvarige för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.</p>
-											</li>
-											<li>
-												<p>Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,</p>
-											</li>
-											<li>
-												<p>Ett informationsmöte med brf-styrelsen om hur besiktningen går till, beroende på typ av besiktning,</p>
-											</li>
-										</ul>
-										<ul>
-											<li>
-												<p>Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige.</p>
-											</li>
-											<li>
-												<p>I vårt nätverk kan vi även erbjuda projektledning/upphandling.</p>
-											</li>
-											<li>
-												<p>Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.</p>
-											</li>
-										</ul>
+										<h3>I våra priser ingår:</h3>
+										<p>
+											Vår projektansvarige för all kontakt och samordning med besiktningsman eller besiktningsgrupp kallelser, restid, besiktning på plats, digitalt utskick av utlåtande.
+										</p>
+										<p>
+											Upprättande av besiktningstidplan med eventuella justeringar, beroende på typ av besiktning,
+										</p>
+										<p>
+											Ett informationsmöte med brf-styrelsen om hur besiktningen går till, beroende på typ av besiktning,
+										</p>
+										<p>
+											Vid längre samarbeten har ni alltid er ”egen” huvudbesiktningsman och projektansvarige.
+										</p>
+										<p>
+											I vårt nätverk kan vi även erbjuda projektledning/upphandling.
+										</p>
+										<p>
+											Om ni har en nyproducerad brf och söker besiktningsgrupp för 2-års besiktning/garantibesiktning offererar vi ett fast pris till er.
+										</p>
 
 									</div>
 								</div>
@@ -826,14 +816,11 @@
 					<div class="content">
 						<div class="container">
 							<div class="container-lg">
-								<h1 class="center fromCenter margin-top-1">Besiktningsman.se för privatpersoner</h1>
-								<h2 class="center small">Digital besiktningsprocess</h2>
-								<div class="margin-bottom-4 border-bottom-grey"></div>
-								<!-- Slide #24 -->
 
-								<div class="fix-10-12">
-									<div class="left ae-5 cropBottom">
-										<p class="bold">Vad är en husbesiktning?</p>
+								<div class="fix-10-12 margin-top-1">
+									<div class="left cropBottom">
+										<h1>Besiktningsman.se för privatpersoner</h1>
+										<h3>Vad är en husbesiktning?</h3>
 										<p>
 											Husbesiktning, eller entreprenadbesiktning som den rätta termen lyder, görs i samband med alla former av byggnation där du anlitat en byggentreprenör.
 										</p>
@@ -841,13 +828,20 @@
 											Det kan handla om att du bygger nytt, bygger till, renoverar eller bygger om. Det kan vara en villa, lägenhet, sommarstuga eller annan byggnad.
 										</p>
 										<p>
-											När du gör en sådan pass stor investering är det naturligt att känna oro för alla myndighetskrav och byggregler.<br> Därför är det viktigt att du själv väljer både Kontrollansvarig och Besiktningsman enligt din lagliga rätt.<br> Kontrollansvarig
-											är din förlängda arm gällande myndighetskrav och Besiktningsman är den person som opartiskt, objektivt samt självständigt utför besiktning mellan dig och din/a entreprenör/er gällande de arbeten som entreprenören har utfört i förhållande till
-											myndighetskrav, bygg- och branschregler.
+											När du gör en sådan pass stor investering är det naturligt att känna oro för alla myndighetskrav och byggregler.
+											<br>
+											<br>
+											Därför är det viktigt att du själv väljer både Kontrollansvarig och Besiktningsman enligt din lagliga rätt.
+											<br>
+											<br>
+											Kontrollansvarig är din förlängda arm gällande myndighetskrav och Besiktningsman är den person som opartiskt, objektivt samt självständigt utför besiktning mellan dig och
+											<br>din/a entreprenör/er gällande de arbeten som entreprenören har utfört i förhållande till myndighetskrav, bygg- och branschregler.
 										</p>
 										<p>
-											Syftet med besiktningen är att få en opartisk fackmässig kontroll av att byggentreprenören utfört sitt arbete på ett korrekt sätt och på det sätt ni kommit överens om. <br> Det finns flera olika former av besiktningar, och en god regel är att
-											göra en s k slutbesiktning innan du betalar slutfakturan för arbetet.
+											Syftet med besiktningen är att få en opartisk fackmässig kontroll av att byggentreprenören utfört sitt arbete på ett korrekt sätt och på det sätt ni kommit överens om.
+											<br>
+											<br>
+											Det finns flera olika former av besiktningar, och en god regel är attgöra en s k slutbesiktning innan du betalar slutfakturan för arbetet.
 										</p>
 										<p>
 											Besiktningen är viktig eftersom den ger ett opartiskt underlag som kan vara mycket betydelsefull om något blir fel eller om det uppstår tvister mellan dig och entreprenören eller berörda försäkringsbolag.
@@ -860,8 +854,12 @@
 										</p>
 										<p>
 											För småhusentreprenader med konsument som beställare bör standardavtalet ABS09 tillämpas gällande nybyggnad eller tillbyggnad.
-											<br>För ombyggnation, installationsarbeten och andra arbeten/entreprenader gäller Hantverkarformuläret.
-											<br>För rörinstallationer finns även RK.
+											<br>
+											<br>
+											För ombyggnation, installationsarbeten och andra arbeten/entreprenader gäller Hantverkarformuläret.
+											<br>
+											<br>
+											För rörinstallationer finns även RK.
 										</p>
 										<p>
 											Konsumenttjänstlagen, ABS, Hantverkarformuläret samt Besiktningsmannaboken kan laddas ned hos <a href="www.konsumentverket.se" class="text-blue">www.konsumentverket.se</a>
