--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -166,10 +166,10 @@
 							</h3>
 							<div class="margin-left-2" style="margin-top: 15px;">
 								<p class="micro bold">Magnus Janson</p>
-								<p class="micro bold">email</p>
-								<p class="micro bold">phone</p>
+								<a href="mailto:magnus.janson@Besiktningsman.se"><p class="micro bold text-blue">E-post: magnus.janson@Besiktningsman.se</p></a>
+								<a href="tel:+46101654015"><p class="micro bold text-blue">Tel: +46101654015</p></a>
 								<a href="#"><p class="micro bold text-blue">Foton</p></a>
-								<a href="#"><p class="micro bold text-blue">Logga</p></a>
+								<a href="../assets/svg/bm_loggor_svg.zip"><p class="micro bold text-blue">Logga</p></a>
 							</div>
 							<h3 class="pad-header margin-0" style="padding-left: 20px;">
 								Pressmeddelanden
@@ -239,8 +239,11 @@
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
-              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">
-Heleneborgsgatan 54, 117 32 Stockholm</p></a>
+              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn">
+								<p class="text-blue bold">
+									Heleneborgsgatan 54, 117 32 Stockholm
+								</p>
+							</a>
 							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
             <li class="col-6-12 ae-5">
