Removed unnecessary hardcoded css

--- a/index.html
+++ b/index.html
@@ -270,30 +270,30 @@
 								<div class="fix-7-12 noSelect">
 									<div class="sliderBox-83">
 										<p class="center margin-0 text-blueGrey small">Här entreprenadbesiktar vi just nu</p>
-										<ul class="slider clickable autoplay ae-1 fromAbove Quote" data-slider-interval="5000" data-slider-stoponclick="false" data-slider-id="83">
+										<ul class="slider clickable autoplay fromAbove Quote" data-slider-interval="5000" data-slider-stoponclick="false" data-slider-id="83">
 											<li class="selected">
 												<h3>IKANO</h3>
 												<p>BRF Skogsstjärnan</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="wide soft-shadow" style="border-radius:8px;" alt="title"/>
+												<img src="assets/img/projects/brf_skogsstjernan.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF Skogsstjärnan"/>
 											</li>
 											<li>
 												<h3>SKANSKA</h3>
 												<p>BRF The View</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_theview.jpg" class="wide soft-shadow" style="border-radius:8px;" alt="title"/>
+												<img src="assets/img/projects/brf_theview.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF The View"/>
 											</li>
 											<li>
 												<h3>EINAR MATSSON</h3>
 												<p>BRF Haganova</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_haganova.jpg" class="wide soft-shadow" style="border-radius:8px;" alt="title"/>
+												<img src="assets/img/projects/brf_haganova.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF Haganova"/>
 											</li>
 											<li>
 												<h3>BYGGVESTA</h3>
 												<p>BRF Terrassen</p>
 												<div class="img-fade img-border-radius"></div>
-												<img src="assets/img/projects/brf_terrassen.jpg" class="wide soft-shadow" style="border-radius:8px;" alt="title"/>
+												<img src="assets/img/projects/brf_terrassen.jpg" class="wide soft-shadow img-border-radius" alt="Projekt foto av BRF Terrassen"/>
 											</li>
 										</ul>
 										<ul class="controller center dots ae-3 fromBottom margin-bottom-2" data-slider-id="83">
@@ -388,7 +388,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow" width="1000" style="border-radius: 8px;" src="assets/img/backgrounds/goldengate.jpg" alt="Foto av byggare på Golden Gate Bridge" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/goldengate.jpg" alt="Foto av byggare på Golden Gate Bridge" />
 							</li>
 						</ul>
 					</div>
@@ -407,7 +407,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left ae-1 fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow" width="1000" style="border-radius:8px;" src="assets/img/backgrounds/brf.jpg" alt="Foto av BRF i Belfast" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/backgrounds/brf.jpg" alt="Foto av BRF i Belfast" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Besiktningstjänster för bostadsrättsföreningar</h1>
@@ -505,7 +505,7 @@
 								</ul>
 							</li>
 							<li class="col-6-12 left fromRight">
-								<img class="macbook-62 margin-bottom-3 soft-shadow" width="900" style="border-radius: 8px;" src="assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten" />
+								<img class="macbook-62 margin-bottom-3 soft-shadow img-border-radius" width="900" src="assets/img/backgrounds/village_houses.jpg" alt="Fritidshus på svenska västkusten" />
 							</li>
 						</ul>
 					</div>
@@ -523,7 +523,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow" width="1000" style="border-radius:8px;" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="assets/img/ispect/ispect_bm.jpg" alt="Besiktningsman med iSpect öppen i sin iPad" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vår digitala besiktningsprocess</h1>
