--- a/karriar/index.html
+++ b/karriar/index.html
@@ -166,7 +166,7 @@
 					<div class="fix-12-12">
 						<ul class="flex reverse flex-phone">
 							<li class="col-6-12 left ae-1 fromLeft">
-								<img class="macbook-61 margin-bottom-3 soft-shadow" width="1000" style="border-radius: 8px;" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
+								<img class="macbook-61 margin-bottom-3 soft-shadow img-border-radius" width="1000" src="../assets/img/ispect/bm_pairs.png" alt="Foto av tre besiktningsmän" />
 							</li>
 							<li class="col-6-12 left cell-32">
 								<h1 class="">Vill du...</h1>
@@ -212,8 +212,7 @@
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
-              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">
-Heleneborgsgatan 54, 117 32 Stockholm</p></a>
+              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">Heleneborgsgatan 54, 117 32 Stockholm</p></a>
 							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
             <li class="col-6-12 ae-5">
