--- a/om_oss/index.html
+++ b/om_oss/index.html
@@ -173,7 +173,7 @@
 							Rikstäckande besiktningstjänster med digitaliserad besiktningsprocess.
 						</h1>
 						<div class="margin-bottom-4 border-bottom-grey"></div>
-						<div class="left ae-5 cropBottom">
+						<div class="left cropBottom">
 							<p>Besiktningsman.se är ledande inom entreprenadbesiktning för nyproduktion av bostäder och kommersiella byggnader. Sedan starten 2003 har vi också en stark position på bostadsrättsförenings- och småhusmarknaden. Våra grundare och ägare är alltjämt aktiva i företaget.</p>
 							<p>Vi utför besiktnings- och KA- tjänster objektivt och opartiskt enligt gällande bygg- och branschregler.</p>
 							<p>Vi har cirka 30 välutbildade medarbetare med gedigen bakgrund från byggsektorn och besiktningsarbete. Det ger oss kapacitet att möta mycket höga kundkrav på ett stabilt och sakkunnigt utförande. Vi erbjuder kompletta besiktningsgrupper för samtliga
@@ -381,8 +381,7 @@
           <ul class="later center">
             <li class="col-6-12 ae-3">
               <h3 class="margin-bottom-1">Kontor</h3>
-              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">
-Heleneborgsgatan 54, 117 32 Stockholm</p></a>
+              <a target="_blank" href="https://goo.gl/maps/RSkTwoQWpEn"><p class="text-blue bold">Heleneborgsgatan 54, 117 32 Stockholm</p></a>
 							<a href="tel:0101654000"><p class="text-blue bold">Telefon: 010-165 40 00</p></a>
             </li>
             <li class="col-6-12 ae-5">
