testing overflow scroll on the news

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -199,7 +199,26 @@
 					</h1>
 					<!-- newsflow list / latest first -->
 					<div class="fix-5-12 fromRight" id="news">
-
+						<div >
+							<h3>Rinkebyterrassen, Rinkeby</h3>
+							<p>
+								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
+							</p>
+							<div class="fromLeft left">
+								<img class="soft-shadow img-border-radius"src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
+							</div>
+						</div>
+						<div >
+							<h3>Rinkebyterrassen, Rinkeby</h3>
+							<p>
+								Rinkebyterrassen är nu färdigställt och har invigning under helgen den 15:e till 16:e September.
+							</p>
+							<div class="fromLeft left">
+								<img class="soft-shadow img-border-radius"src="../assets/img/projects/sweco_rinkebyterrass.jpg" alt="Foto av Rinkebyterrassen, Rinkeby">
+								<p class="micro text-blueGrey center">Rinkebyterrassen, Rinkeby</p>
+							</div>
+						</div>
 						<div >
 							<h3>Rinkebyterrassen, Rinkeby</h3>
 							<p>
