Additional fixes for news page

--- a/nyheter/index.html
+++ b/nyheter/index.html
@@ -193,7 +193,7 @@
 					</div>
 
 					<!-- newsflow title -->
-					<h1 class="fix-5-12 left fromRight">
+					<h1 class="fix-5-12 left fromRight" id="news-title">
 						Händelser
 						<div class="border-bottom-grey" style="margin: 0;"></div>
 					</h1>
