--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
 	<!-- favicons -->
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- Making the website social media friendly-->
-	<meta name="description" content="Vi erbjuder certifierade &amp; oberoende besiktningsmän för  både fastighet &amp; utemiljö. Du hittar oss bland annat i Stockholm, Malmö &amp; Göteborg. Kontakta oss" />
-	<meta name="robots" content="noodp" />
+	<meta name="description" content="Vi erbjuder certifierade och oberoende besiktningsmän för fastighet samt utemiljö. Du hittar oss bland annat i Stockholm, Malmö och Göteborg." />
 	<link rel="canonical" href="http://www.besiktningsman.se/" />
 	<meta property="og:locale" content="sv_SE" />
 	<meta property="og:type" content="website" />
@@ -245,10 +244,10 @@
 		<div class="background" style="background-image:url(assets/img/backgrounds/goldengate.jpg)" alt="Foto av Golden Gate under sin konstruktion"></div>
 	</section>
 	<!-- ENTERPRISE START -->
-	<section class="slide whiteSlide kenBurns fromLeft phones selected active animate" id="entreprenad">
+	<section class="slide whiteSlide fromLeft" id="entreprenad">
 		<div class="content">
-			<div class="container" style="height: 100% !important;">
-				<div class="wrap" style="display: block;">
+			<div class="container">
+				<div class="wrap">
 
 					<div class="fix-12-12">
 						<ul class="flex reverse">
@@ -266,7 +265,7 @@
 								<a href="kontakt/" class="common-Button blue text-white">Kontakta mig</a>
 							</li>
 							<div class="col-6-12 left fromRight">
-								<!-- EXAMPLE: Slider Autoplay -->
+								<!-- Projects: Slider Autoplay -->
 								<div class="fix-7-12 noSelect">
 									<div class="sliderBox-83">
 										<p class="center margin-0 text-blueGrey small">Här entreprenadbesiktar vi just nu</p>
